--- a/crates/riddle_app/Cargo.toml
+++ b/crates/riddle_app/Cargo.toml
@@ -11,4 +11,4 @@ log = "0.4.17"
 reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
-serenity = { version = "0.11.5", features = ["reqwest", "rustls_backend"] }
+serenity = { version = "0.11.5", default-features = false, features = ["reqwest", "rustls_backend", "client", "gateway", "model"] }
